--- a/src/main/resources/templates/settings/all.html
+++ b/src/main/resources/templates/settings/all.html
@@ -58,7 +58,7 @@
         <button class="btn btn-primary js-new" th:text="#{add.new}"></button>
     </div>
 </div>
-<footer>
+<footer class="footer">
     <a href="/settings/payments" th:text="#{all.payments}" class="btn btn-primary"/>
 </footer>
 </body>
