--- a/src/main/resources/templates/service-contracts/list.html
+++ b/src/main/resources/templates/service-contracts/list.html
@@ -32,7 +32,7 @@
         <td th:text="*{accountLogin}"></td>
         <td th:text="*{accountPassword}"></td>
         <td th:text="*{comment}"></td>
-        <td><a th:href="'/service-contracts/'+*{id}" th:text="#{edit}" class="btn btn-primary"></a></td>
+        <td><a th:href="'/service-contracts/'+*{id}" th:text="#{edit}" class="btn btn-primary btn-xs"></a></td>
     </tr>
     </tbody>
 </table>
