--- a/src/main/resources/templates/apartments/form.html
+++ b/src/main/resources/templates/apartments/form.html
@@ -12,10 +12,10 @@
 <form th:object="${apartmentVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{buildingId}"/>
         <div class="form-group col-sm-6">
             <label th:text="#{address}"></label>
-            <input class="form-control" th:field="*{address}" readonly="true"/>
+            <input type="hidden" th:field="*{buildingId}"/>
+            <a th:text="*{address}" th:href="'/buildings/'+*{buildingId}" class="form-control"/>
         </div>
         <div class="form-group col-sm-6">
             <label th:text="#{room.number}"></label>
@@ -28,7 +28,8 @@
         </div>
         <div class="form-group col-sm-6">
             <label th:text="#{tenant}"></label>
-            <input class="form-control" th:field="*{tenantName}" readonly="true"/>
+            <input type="hidden" th:field="*{tenantId}"/>
+            <a th:text="*{tenantName}" th:href="'/tenants/'+*{tenantId}" class="form-control"/>
         </div>
         <hr/>
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
