--- a/src/main/resources/templates/buildings/form.html
+++ b/src/main/resources/templates/buildings/form.html
@@ -13,7 +13,6 @@
 <form th:object="${buildingVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{ownerId}"/>
         <div class="form-group col-sm-6">
             <label th:text="#{address}"></label>
             <div class="alert-danger" th:errors="*{address}">Address Error</div>
@@ -21,7 +20,8 @@
         </div>
         <div class="form-group col-sm-6">
             <label th:text="#{owner}"></label>
-            <input class="form-control" th:field="*{ownerName}" th:readonly="true"/>
+            <input type="hidden" th:field="*{ownerId}"/>
+            <a th:href="'/owners/'+*{ownerId}" class="form-control" th:text="*{ownerName}"/>
         </div>
         <div class="form-group col-sm-6">
             <label th:text="#{bank.account.number}"></label>
