--- a/src/main/resources/templates/owner-accounts/form.html
+++ b/src/main/resources/templates/owner-accounts/form.html
@@ -16,7 +16,7 @@
         <div class="form-group col-sm-6">
             <label for="number" th:text="#{bank.account.number}"></label>
             <div class="alert-danger" th:errors="*{id}">Id Error</div>
-            <input class="form-control" id="number" th:field="*{id}"/>
+            <input class="form-control" id="number" th:field="*{id}" th:readonly="${!isNew}"/>
         </div>
         <div class="form-group col-sm-6">
             <label for="balance" th:text="#{account.balance}"></label>
@@ -25,8 +25,8 @@
         </div>
         <div class="form-group col-sm-6">
             <label for="bank" th:text="#{person.name}"></label>
-            <select class="selectpicker form-control" data-live-search="true" id="bank" th:field="*{bankId}" th:each="bank : ${banks}">
-                <option th:value="${bank.id}" th:text="${bank.name}"></option>
+            <select class="selectpicker form-control" data-live-search="true" id="bank" th:field="*{bankId}">
+                <option th:each="bank : ${banks}" th:value="${bank.id}" th:text="${bank.name}"></option>
             </select>
         </div>
         <hr/>
@@ -34,7 +34,7 @@
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
         <div class="footer">
-            <a th:href="'/reports/account/'+*{id}" th:text="#{view.report}" class="btn btn-primary"></a>
+            <a th:unless="${isNew}" th:href="'/reports/account/'+*{id}" th:text="#{view.report}" class="btn btn-primary"></a>
             <button th:if="${isNew}" type="submit" class="pull-right btn btn-success" th:text="#{save}">Save</button>
         </div>
     </div>
