--- a/src/main/resources/templates/service-companies/form.html
+++ b/src/main/resources/templates/service-companies/form.html
@@ -25,6 +25,7 @@
                     <option th:value="${type.key}" th:text="${type.value}"></option>
                 </th:block>
             </select>
+            <input type="hidden" th:field="*{typeId}" th:unless="${serviceCompanyVO.id==0}" />
             <input class="form-control" th:field="*{typeName}" th:unless="${serviceCompanyVO.id==0}" th:readonly="true"/>
         </div>
         <div class="form-group col-sm-6">
@@ -50,7 +51,7 @@
         <div class="form-group col-sm-6">
             <label th:text="#{comment}"></label>
             <div class="alert-danger alert" th:errors="*{comment}"/>
-            <input class="form-control" th:field="*{comment}"/>
+            <textarea class="form-control" th:field="*{comment}"/>
         </div>
         <hr/>
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
