--- a/src/main/resources/templates/service-contracts/form.html
+++ b/src/main/resources/templates/service-contracts/form.html
@@ -19,6 +19,7 @@
         <div class="form-group col-sm-6">
             <label th:text="#{service.company.name}"></label>
             <div class="alert-danger alert" th:errors="*{serviceCompanyId}"/>
+            <input type="hidden" th:field="*{serviceCompanyId}" th:unless="*{id==0}"/>
             <a th:unless="*{id==0}" class="form-control" th:text="*{companyName}"
                th:href="'/service-companies/'+*{serviceCompanyId}"/>
             <select th:if="*{id==0}" data-live-search="true" class="form-control selectpicker"
@@ -29,6 +30,7 @@
         <div class="form-group col-sm-6">
             <label th:text="#{building}"></label>
             <div class="alert-danger alert" th:errors="*{buildingId}"/>
+            <input type="hidden" th:field="*{buildingId}" th:unless="*{id==0}"/>
             <a th:unless="*{id==0}" class="form-control" th:text="*{buildingAddress}"
                th:href="'/buildings/'+*{buildingId}"/>
             <select data-live-search="true" class="form-control selectpicker" th:field="*{buildingId}"
@@ -67,7 +69,7 @@
         <div class="form-group col-sm-6">
             <label th:text="#{comment}"></label>
             <div class="alert-danger alert" th:errors="*{comment}"/>
-            <input class="form-control" th:field="*{comment}"/>
+            <textarea class="form-control" th:field="*{comment}"/>
         </div>
         <hr/>
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
