aop done(had to split), localization implemented

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,15 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"
+          th:lang="${#locale.getDisplayLanguage()}"/>
     <title th:text="#{login}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
 <form th:action="@{/login}" method="post">
     <div class="container" style="max-width:500px">
-        <fieldset >
-            <legend th:text="#{login}"></legend>
+        <fieldset>
+            <legend>
+                <span th:text="#{login}"></span>
+                <span class="pull-right">
+                    <a href="/login?lang=en"><img style="height: 20px" src="/css/images/gb.svg"/></a>
+                    <a href="/login?lang=fr"><img style="height: 20px" src="/css/images/fr.svg"/></a>
+                </span>
+            </legend>
             <div th:if="${param.error}" class="alert alert-danger" th:text="#{login.error}">
 
             </div>
@@ -18,12 +25,12 @@
 
             </div>
             <div class="form-group">
-            <label for="username" th:text="#{username}">Username</label>
-            <input class="form-control" type="text" id="username" name="username" autofocus="autofocus"/>
+                <label for="username" th:text="#{username}">Username</label>
+                <input class="form-control" type="text" id="username" name="username" autofocus="autofocus"/>
             </div>
             <div class="form-group">
-            <label for="password" th:text="#{password}">Password</label>
-            <input class="form-control" type="password" id="password" name="password"/>
+                <label for="password" th:text="#{password}">Password</label>
+                <input class="form-control" type="password" id="password" name="password"/>
             </div>
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary" th:text="#{login}">Log in</button>
