--- a/src/main/resources/templates/service-contracts/list.html
+++ b/src/main/resources/templates/service-contracts/list.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta th:lang="${#locale.getDisplayLanguage()}" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
     <title th:text="#{service.contracts}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
