--- a/src/main/resources/templates/service-companies/form.html
+++ b/src/main/resources/templates/service-companies/form.html
@@ -4,7 +4,7 @@
 >
 <!--/*@thymesVar id="serviceCompanyVO" type="com.proskurnia.VOs.ServiceCompanyVO"*/-->
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta th:lang="${#locale.getDisplayLanguage()}" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
     <title th:text="${serviceCompanyVO.name}?:#{new.service.company}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
