--- a/src/main/resources/templates/tenants/form.html
+++ b/src/main/resources/templates/tenants/form.html
@@ -4,7 +4,7 @@
 >
 <!--/*@thymesVar id="personVO" type="com.proskurnia.VOs.PersonVO"*/-->
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta th:lang="${#locale.getDisplayLanguage()}" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
     <title th:text="${personVO.name}?:#{new.tenant}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
