--- a/src/main/resources/templates/service-companies/list.html
+++ b/src/main/resources/templates/service-companies/list.html
@@ -4,7 +4,7 @@
 >
 <head>
     <meta th:lang="${#locale.getDisplayLanguage()}" charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
-    <title th:text="#{all.owners}">Title</title>
+    <title th:text="#{owners}">Title</title>
     <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
